#pragma once
#include <iostream>

using namespace std;

class Historia {
public:
    void Mostrar_Evento_1();
    void Mostrar_Evento_2();
    void Mostrar_Evento_3();
    void Mostrar_Evento_4();
};

void Historia::Mostrar_Evento_1() {
    cout << "En un reino antiguo y místico, donde la magia fluía como un río y los dioses caminaban entre "
         << "los mortales, vivía un joven guerrero llamado ____. ____ era conocido por su valentía y su "
         << "devoción como clérigo del templo de la diosa del fuego solar, _____. "
         << "Una noche, mientras rezaba en el templo, una luz brillante iluminó la estancia. Frente a él "
         << "apareció una figura radiante: el Avatar de Lysara, envuelto en llamas doradas. El Avatar  "
         << "extendió sus manos hacia __ y, en un gesto solemne, le entregó un arma encantada, forjada  "
         << "con el fuego sagrado del sol. El arma, llamada _________, emanaba un poder inmenso y  "
         << "brillaba con intensidad. "
         << "Junto con el arma, el Avatar de Lysara entregó a ___ dos pociones. Una era de sanación,  "
         << "capaz de curar heridas y restaurar su vitalidad en momentos de necesidad. La otra era de "
         << "resistencia, que aumentaba su fuerza y protección durante la batalla. Estas herramientas "
         << "serían clave en su misión. "
         << "El Avatar de Lysara habló con una voz serena pero firme: ___, hijo mío, te confío una misión "
         << "crucial. El dios dragón Orsted ha desatado su ejército en nuestro reino, sembrando "
         << "destrucción y caos. Debes frenar su avance y acabar con Kassadin, uno de los líderes más "
         << "temidos de su ejército. Solo tú, con el poder de Lysara, puedes enfrentarlo y restaurar la  "
         << "paz."
         << "____ asintió con determinación y aceptó el desafío. Se equipó con la armadura sagrada de su  "
         << "orden y se dispuso a partir hacia la fortaleza de Kassadin. Sabía que el camino no sería fácil,"
         << "pero estaba decidido a honrar a su diosa y proteger a su pueblo. " << endl;
}

void Historia::Mostrar_Evento_2() {
    cout << "Con ________ en mano y las pociones en su bolsa, ___ se adentró en tierras peligrosas. En su  "
         << "travesía, encontró desafíos y peligros en forma de criaturas fantásticas y fieles seguidores  "
         << "de Orsted. Sin embargo, el fuego sagrado de Lysara lo envolvía, otorgándole fuerza y coraje. "
         << "Finalmente, ___ llegó a la fortaleza de Kassadin, una imponente construcción de piedra  "
         << "negra. Se enfrentó a los guardias del líder enemigo y avanzó hacia el interior. Las llamas de  "
         << "_______ cortaban el aire, derrotando a sus enemigos mientras avanzaba sin miedo. " << endl;
}

void Historia::Mostrar_Evento_3() {
    cout << "Kassadin, al enterarse de la presencia de ___, salió a su encuentro. Era un guerrero  "
         << "formidable con una armadura negra que reflejaba la crueldad en sus ojos. La batalla fue "
         << "épica, con destellos de fuego y espadas chocando. ___ utilizó las pociones en momentos "
         << "críticos, sanándose y fortaleciéndose para resistir los embates del enemigo. " << endl;
}

void Historia::Mostrar_Evento_4() {
    cout << "Finalmente, con un último golpe de ______, ____ derrotó a Kassadin. El líder del ejército  "
         << "enemigo cayó de rodillas, derrotado y desarmado, ante ____. La victoria había sido "
         << "alcanzada, y el ejército del dios dragón Orsted se debilitaría sin su temible líder. "
         << "____ se acercó a Kassadin, mirándolo con una mezcla de compasión y determinación. En ese "
         << "momento, un destello de luz dorada llenó el lugar. El Avatar de Lysara apareció una vez más, "
         << "su figura radiante y majestuosa. Con una voz llena de gratitud, la diosa del fuego solar se "
         << "dirigió a ____: Hijo mío, has demostrado valentía y devoción en esta difícil misión. Gracias a  "
         << "ti, nuestro reino se encuentra más cerca de la paz. Pero el peligro aún acecha. Hay una nueva "
         << "amenaza que requiere de tu habilidad y coraje."
         << "____ se arrodilló ante la diosa y respondió con determinación: Diosa Lysara, estoy a su "
         << "servicio. Dígame cuál es la próxima misión que debo emprender." << endl;
}

