#pragma once
#include <iostream>

using namespace std;

class Mapa {
public:
    void Mostrar_Mapa_1();
    void Mostrar_Mapa_2();
    void Mostrar_Mapa_3();
};

void Mapa::Mostrar_Mapa_3() {
cout << "  ##################################\n"
        "  # █████████████████████████████  #\n"
        "  # █ CASTILLO                  █  #\n"
        "  # █ NEGRO        |            █  #\n"
        "  # █           █▄██▄█          █  #\n"
        "  # █  █▄█▄█▄█▄█▐█┼██▌█▄█▄█▄█▄█ █  #\n"
        "  # █  ███┼█████▐████▌█████┼███ █  #\n"
        "  # █  █████████▐█__█▌█████████ █  #\n"
        "  # █  ########       ######### █  #\n"
        "  # █████████████████████████████  #\n"
        "  #                                #\n"
        "  ##################################" << endl;
}

void Mapa::Mostrar_Mapa_1() {
cout << "  ######################################\n"
        "  # █████████████████████████████████  #\n"
        "  # █  IGLESIA                      █  #\n"
        "  # █              ▄█▄              █  #\n"
        "  # █    ▄▄       ▄▄█▄▄▄      ▄▄    █  #\n"
        "  # █   ████ ▄█▄  █ ▄▄ █ ▄█▄ ████   █  #\n"
        "  # █   █▄██▄▄█▄▄▄██████▄▄█▄▄██▄█   █  #\n"
        "  # █   ██▄██ █████████████ ██▄██   █  #\n"
        "  # █   █▄███ ███▄████▄████ ███▄█   █  #\n"
        "  # █   ██▄██ █▄█▄█▀▀█▄█▄██ ██▄██   █  #\n"
        "  # █   █████ █▄█▄█▒▒█▄█▄██ █████   █  #\n"
        "  # █                               █  #\n"
        "  # █████████████████████████████████  #\n"
        "  ######################################" << endl;  
}

void Mapa::Mostrar_Mapa_2() {
 cout << "  ####################################### \n"
        "  # ██████████████████████████████████  # \n"
        "  # █  BANDIDOS                      █  # \n"
        "  # █                ░░              █  # \n"
        "  # █    ░▒▒░      ░░▒▒░    ░▒▒░     █  # \n"
        "  # █   ░▒▓▓▒▒░   ░░▒▓▓▒▒   ░▒▓▓▒▒░  █  # \n"
        "  # █  ░▒═╣▓▒░    ░▒═╣▓▒░  ░▒═╣▓▒░   █  # \n"
        "  # █     ║          ║        ║      █  # \n"
        "  # █   (๑•̀ㅂ•́)و✧        (ಠ╭╮ಠ )    █  # \n"
        "  # █    (╬▔皿▔)╯       ᕦ(ò_óˇ)ᕤ    █  # \n"
        "  # █                                █  # \n"
        "  # ██████████████████████████████████  # \n"
        "  ####################################### \n"  << endl; 
}

